--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -12,10 +12,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "babel-loader": "^9.1.3",
     "csv-loader": "^3.0.5",
     "json5": "^2.2.3",
     "toml": "^3.0.0",
-    "webpack": "^5.88.2",
+    "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "xml-loader": "^1.2.1",
     "yamljs": "^0.3.0"
