--- a/npm-demo-app/package.json
+++ b/npm-demo-app/package.json
@@ -1,8 +1,49 @@
 {
+  "comment1": "package.json is config file that npm uses to save all project info",
+  "comment2": "npm will then read this file and do things such as install all of the listed dependencies with the correct versions and running commands I've set as an npm script",
+  "comment3": "clone a repo, then run, npm install (which lets npm grab the code for the dependencies), npm would read this package.json file, and see the dependencies/packages it needs to install",
+  "comment4": "once this dependency is installed, I can run npm scripts that use that package",
+  "comment5": "when I use npm to install or uninstall packages, npm will automatically update the package.json with new details",
+  "comment6": "webpack is a package that bundles modules",
+  "comment7": "name and version fields are required",
+  "comment8": "when an app is fed into a module bundler, all required dependencies are pulled together and bundled",
+  "comment9": "I need to ensure that these packages are present in dependencies as they're needed at runtime",
+  "comment10": "devDependencies are packages consumed by requireing them in file or run as binaries, during the dev phase",
+  "comment11": "examples of packaged required only during dev: babel plugins and presets, test runners, and linter packages",
   "name": "demo-app",
   "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "comment17": "build runs webpack and shows percent progress and --mode=production minimizes the code for production",
+  "comment18": "watch automatically re-runs webpack each time any JS file changes",
+  "comment19": "webpack-dev-server provides a simple web server with live reloading",
+  "comment20": "serve option will automatically open index.html in my browser with an address of localhost:8080 (by default)",
+  "comment21": "any time I change my JS in index.js, webpack-dev-server will rebuild its own bundled JS and refresh the browser automatically",
+  "comment22": "I can make npm scripts for any tasks that has a command line tool",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --progress --mode=production",
+    "watch": "webpack --progress --watch",
+    "serve": "webpack-dev-server --open"
+  },
+  "author": "My Name <email@example.com>",
+  "license": "ISC",
+  "comment12": "useful when sharing a project- instead of sharing the node_modules folder, I only need to share the package.json file and other devs can install the required packages with npm install",
   "dependencies": {
     "lodash": "^4.17.21",
-    "tap": "*" 
+    "moment": "^2.30.1",
+    "tap": "*"
+  },
+  "comment13": "webpack installed in node_modules will get run, start with index.js, find any require statements, and replace them with the appropriate code",
+  "comment14": "and create a single output file is by default is dist/main.js",
+  "comment15": "3 separate packages are installed as dev dependencies",
+  "comment16": "@babel/core is the main part, @ babel/preset-env is a preset defining which new JS features to transpile, and babel-loader enables babel to work with webpack",
+  "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "babel-loader": "^9.1.3",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
