Add and update files for Organizing My JS new lesson, Revisiting Webpack

--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -1,12 +1,48 @@
 {
+  "comment11": "package.json is the hub for npm, housing the names and versions of all installed packages",
+  "comment12": "package.json has the power for automation and efficient project management",
   "name": "webpack-demo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "private": true,
+  "comment7": "production mode (building a project for deployment) does different optimizations for me",
+  "mode": "development",
+  "comment1": "scripts are executed by running, npm run <name>",
+  "comment13": "npm scripts - bundle common shell commands like a set of built-in, custom scripts for my project",
+  "comment14": "shell - CLI that gives a user the ability to interact with the OS by typing text commands",
+  "comment15": "npm scripts are terminal commands that perform a set of actions",
+  "comment16": "npm scripts are a way to run a linter tool, execute tests, start my project locally, build my project minify or uglify JS or CSS",
+  "comment17": "minification - removes all unnecessary characters from source code without changing its functionality",
+  "comment18": "uglification/obfuscation - minifies code and then transforms it to make it harder to read and understand to make it harder to reverse-engineer",
+  "comment19": "CI - continuous integration, merging code changes from multiple contributors into a shared repository several times a day",
+  "comment20": "CD - continuous delivery, automating the release process so that code changes can be deployed to production or any other environment at any time",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "comment2": "npm run build (has the tool's command for building/bundling/compiling) is the same as npx webpack",
+    "build": "webpack",
+    "comment3": "npm run dev (starts a dev server) is the same as npx webpack serve",
+    "dev": "webpack serve",
+    "comment4": "npm run deploy",
+    "deploy": "git subtree push --prefix dist origin gh-pages",
+    "comment5": "these scripts save me time and are somewhat standardized names for my commands",
+    "comment6": "'npx' is only needed to run the commands directly in the terminal without npm scripts",
+    "comment8": "To switch modes, I can have 2 different config files and then have my build and dev npm scripts specify which config file to use",
+    "comment9": "'build': 'webpack --config webpack.prod.js'",
+    "comment10": "'dev': 'webpack serve --config webpack.dev.js'",
+    "comment21": "start: luanches the server or app",
+    "comment22": "test: executes project tests",
+    "comment23": "build: compiles and prepares production-ready code",
+    "comment24": "dev: starts a dev server with live-reloading",
+    "comment25": "lint: enforces code style guidelines",
+    "comment26": "pre/post script: execute tasks before/after primary scripts",
+    "comment27": "clean: removes generated files (e.g., 'dist' folder)",
+    "comment28": "deploy: automates deployment processes",
+    "comment29": "I need to run npm install before any dependency gets installed in my project",
+    "comment30": "manually listing a dependency here does not immediately reflext the state of my node_modules/folder",
+    "comment31": "using npm updates both the package file and node_modules folder together",
+    "comment32": "npm run, to show all available scripts",
+    "comment33": "npm run <script> -- --option"
   },
   "keywords": [],
   "author": "",
@@ -20,12 +56,15 @@
     "toml": "^3.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
+    "webpack-merge": "^6.0.1",
     "xml-loader": "^1.2.1",
     "yamljs": "^0.3.0"
   },
   "dependencies": {
     "css-loader": "^6.8.1",
     "lodash": "^4.17.21",
-    "style-loader": "^3.3.3"
+    "style-loader": "^3.3.3",
+    "xml-js": "^1.6.11",
+    "xml2js": "^0.6.2"
   }
 }
