--- a/webpack-demo-2/package.json
+++ b/webpack-demo-2/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
-    "start": "webpack serve --open",
+    "start": "webpack serve --open --config webpack.dev.js",
     "server": "node server.js",
-    "build": "webpack"
+    "build": "webpack --config webpack.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +19,8 @@
     "html-webpack-plugin": "^5.5.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-middleware": "^6.1.1"
+    "webpack-dev-middleware": "^6.1.1",
+    "webpack-merge": "^6.0.1"
   },
   "dependencies": {
     "lodash": "^4.17.21"
